ontol/ontol-compiler/test-cases/error/union/flattened_unit_variant.on
// Tests two variants of the same problem.
// There are two paths leading to the bug,
// `bar` first and `baz` first..

def anonymous ()

def foo (
    rel* anonymous: ( // ERROR type not representable
        rel* is?: bar
        rel* is?: baz
    )
)

def bar (rel* 'type': 'bar')
def baz () // NOTE type cannot be part of a struct union

def foo_inverted (
    rel* anonymous: (
        rel* is?: baz // ERROR unit type `baz` cannot be part of a union
        rel* is?: bar
    )
)
